# FastGPL

./: .gitignore  CMakeLists.txt  README.md
include/: FastGPL.h  FastGPL_internal.h
src/: CMakeLists.txt  Elliptic.cpp  FastGPL.cpp  FastGPLConfig.cmake.in  FastGPL_internal.cpp  FastGPL_internal_G3.cpp  FastGPL_internal_G4.cpp  FastGPL_internal_G4_simp.cpp  FastGPL_internal_G5.cpp  FastGPL_internal_G5_simp.cpp  FastGPL_internal_G6_1.cpp  FastGPL_internal_G6_2.cpp  FastGPL_internal_G6_3.cpp  FastGPL_internal_G6_4.cpp  FastGPL_internal_G6_simp.cpp  Nielsen.cpp  PolyLog.cpp  Util.cpp
test/: CMakeLists.txt  test.cpp
